--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,34 @@
 *.class
 *.log
+
+*~
+build
+.bundle
+vendor/bundle
+*.iml
+.idea
+atlassian-ide-plugin.xml
+target
+result
+log-test.properties
+package-lock.json
+pgdata
+travis
+fixtures
+.airframe
+.bloop
+.metals
+null
+.DS_Store
+
+node_modules
+
+website/translated_docs
+website/build/
+website/yarn.lock
+website/node_modules
+website/i18n/*
+
+log/*
+.vscode/launch.json
+project/metals.sbt
