--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,9 +29,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: olafurpg/setup-scala@v13
+      - uses: actions/setup-java@v3
         with:
-          java-version: adopt@1.11
+          distribution: 'temurin'
+          java-version: '17'
       - uses: actions/cache@v3.0.11
         with:
           path: ~/.cache
@@ -44,9 +45,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: olafurpg/setup-scala@v13
+      - uses: actions/setup-java@3
         with:
-          java-version: adopt@1.11
+          distribution: 'temurin'
+          java-version: '17'
       - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
